[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Sprites/Setting_button-export.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Menus/Start_screen.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Main_screen.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Fonts/Helvetica.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 4 )

[node name="Start_screen" type="Control" groups=[
"update_font",
]]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
Main_screen = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" type="TextureButton" parent="."]
modulate = Color( 0.211765, 0.968627, 0.184314, 1 )
margin_left = 448.0
margin_top = 488.0
margin_right = 576.0
margin_bottom = 530.0
texture_normal = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="TextureButton"]
margin_left = 8.0
margin_top = 8.0
margin_right = 120.0
margin_bottom = 32.0
custom_colors/font_color = Color( 0.211765, 0.968627, 0.184314, 1 )
text = "START"
align = 1
valign = 1

[node name="Settings" type="Node" parent="."]

[node name="Font_Button" type="TextureButton" parent="Settings"]
margin_left = 128.0
margin_top = 240.0
margin_right = 256.0
margin_bottom = 282.0
rect_scale = Vector2( 1.5, 1.5 )
texture_normal = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Settings"]
margin_left = 144.0
margin_top = 264.0
margin_right = 304.0
margin_bottom = 281.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.211765, 0.968627, 0.184314, 1 )
text = "HEVELTICA"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="Settings"]
margin_left = 128.0
margin_top = 320.0
margin_right = 320.0
margin_bottom = 334.0
custom_colors/font_color = Color( 0.211765, 0.968627, 0.184314, 1 )
text = "Font"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Font_Button3" type="TextureButton" parent="Settings"]
margin_left = 640.0
margin_top = 240.0
margin_right = 768.0
margin_bottom = 282.0
rect_scale = Vector2( 1.5, 1.5 )
texture_normal = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label5" type="Label" parent="Settings"]
margin_left = 656.0
margin_top = 264.0
margin_right = 816.0
margin_bottom = 278.0
custom_colors/font_color = Color( 0.211765, 0.968627, 0.184314, 1 )
text = "OFF"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label6" type="Label" parent="Settings"]
margin_left = 640.0
margin_top = 320.0
margin_right = 832.0
margin_bottom = 334.0
custom_colors/font_color = Color( 0.211765, 0.968627, 0.184314, 1 )
text = "\"Ambient\" sounds"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="."]
margin_left = -1416.0
margin_top = 88.0
margin_right = -456.0
margin_bottom = 218.0
rect_scale = Vector2( 4, 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="Control"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -480.0
margin_right = 480.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0.211765, 0.968627, 0.184314, 1 )
text = "RIOT MONITOR"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="pressed" from="Settings/Font_Button" to="." method="_on_Font_Button_pressed"]
[connection signal="pressed" from="Settings/Font_Button3" to="." method="_on_Font_Button3_pressed"]
